--- a/index.html
+++ b/index.html
@@ -6,12 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-  <div id="principal">
-    <header>
+  
+   
+    <nav class="navbar navbar-expand-md bg-body-tertiary" >
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse"  id="navbar-toggler">
+          <a class="navbar-brand" href="index.html">ANYA TAYLOR JOY</a>
+          <ul class="navbar-nav d-flex justify-content-center align-items-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="sections/historia.html">HISTORIA</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sections/fotos.html">FOTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sections/videos.html">VIDEOS</a>
+            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sections/contacto.html">SUSCRIPCION</a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+
+    <!-- Barra vieja de navegacion -->
+    <!-- <header>
       <h1><a href="index.html">Anya Taylor Joy</a></h1>
       <nav>
         <ul>
@@ -21,7 +52,8 @@
           <li><a href="contacto.html">suscribete</a></li>
         </ul>
       </nav>
-    </header>
+    </header> -->
+    <div id="principal"></div>
     <section>
       <p class="presentacion">página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
         les guste</p>
