--- a/index.html
+++ b/index.html
@@ -6,69 +6,61 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-  
-   
-    <nav class="navbar navbar-expand-md bg-body-tertiary" >
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse"  id="navbar-toggler">
-          <a class="navbar-brand" href="index.html">ANYA TAYLOR JOY</a>
-          <ul class="navbar-nav d-flex justify-content-center align-items-center">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="sections/historia.html">HISTORIA</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sections/fotos.html">FOTOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sections/videos.html">VIDEOS</a>
-            </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sections/contacto.html">SUSCRIPCION</a>
-            </li>
-          </ul>
 
-        </div>
-      </div>
-    </nav>
-
-    <!-- Barra vieja de navegacion -->
-    <!-- <header>
-      <h1><a href="index.html">Anya Taylor Joy</a></h1>
-      <nav>
-        <ul>
-          <li><a href="historia.html">historia</a></li>
-          <li><a href="fotos.html">fotos</a></li>
-          <li><a href="videos.html">videos</a></li>
-          <li><a href="contacto.html">suscribete</a></li>
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #69b6d4;">
+    <div class="container-fluid">
+      <a class="navbar-brand">ANYA TAYLOR JOY</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-toggler">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sections/historia.html">HISTORIA</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sections/fotos.html">FOTOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sections/videos.html">VIDEOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sections/contacto.html">SUSCRIPCION</a>
+          </li>
         </ul>
-      </nav>
-    </header> -->
-    <div id="principal"></div>
-    <section>
-      <p class="presentacion">página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
-        les guste</p>
+      </div>
+    </div>
+  </nav>
 
-      <h4>
-        Sus redes sociales oficiales
-      </h4>
-      <a href="https://www.instagram.com/anyataylorjoy/" target="_blank"><img src="assets/img/instagram.png"
-          alt="logo de instagram"></a>
-      <a href="https://www.twitter.com/anyataylorjoy/" target="_blank"><img src="assets/img/twitter.png"
-          alt="logo de twitter"></a>
-    </section>
-    <footer>
-      <p class="piecito">Página creada por Sebastian Leque</p>
-    </footer>
+  <div id="principal"></div>
+  <section>
+    <p class="presentacion">página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
+      les guste</p>
+
+    <h4>
+      Sus redes sociales oficiales
+    </h4>
+    <a href="https://www.instagram.com/anyataylorjoy/" target="_blank"><img src="assets/img/instagram.png"
+        alt="logo de instagram"></a>
+    <a href="https://www.twitter.com/anyataylorjoy/" target="_blank"><img src="assets/img/twitter.png"
+        alt="logo de twitter"></a>
+  </section>
+  <footer>
+    <p class="piecito">Página creada por Sebastian Leque</p>
+  </footer>
   </div>
 </body>
 
