--- a/sections/fotos.html
+++ b/sections/fotos.html
@@ -1,33 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-    <div id="principal">
-      <header>
-        <h1><a href="index.html">Anya Taylor Joy</a></h1>
-        <ul>
-            <li><a href="historia.html">historia</a></li>
-            <li><a href="fotos.html">fotos</a></li>
-            <li><a href="videos.html">videos</a></li>
-            <li><a href="contacto.html">suscribete</a></li>
-        </ul>
 
-      </header>
-      <section class="fotos">
-        <img src="assets/img/foto1.jpg" alt="wallpapaer de Anya 1">
-        <img src="assets/img/foto2.jpg" alt="wallpapaer de Anya 2">
-        <img src="assets/img/foto3.jpg" alt="wallpapaer de Anya 3">
-        <img src="assets/img/foto4.jpg" alt="wallpapaer de Anya 4">
-      </section>
-      <footer>
-        <p class="piecito">Página creada por Sebastian Leque</p>
-      </footer>    
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
+
+  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #69b6d4;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">ANYA TAYLOR JOY</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-toggler">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="historia.html">HISTORIA</a>
+          </li>
+          <li class="nav-item">
+            <a a class="nav-link active" aria-current="page" href="fotos.html">FOTOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="videos.html">VIDEOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">SUSCRIPCION</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+
+  <section class="fotos">
+    <img src="assets/img/foto1.jpg" alt="wallpapaer de Anya 1">
+    <img src="assets/img/foto2.jpg" alt="wallpapaer de Anya 2">
+    <img src="assets/img/foto3.jpg" alt="wallpapaer de Anya 3">
+    <img src="assets/img/foto4.jpg" alt="wallpapaer de Anya 4">
+  </section>
+  <footer>
+    <p class="piecito">Página creada por Sebastian Leque</p>
+  </footer>
+  </div>
 </body>
+
 </html>
