corrigiendo el responsive del index

--- a/index.html
+++ b/index.html
@@ -47,16 +47,20 @@
 
   <div id="principal"></div>
   <section>
-    <p class="presentacion">página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
-      les guste</p>
+    <div class="presentacion">
+      <p >página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
+        les guste</p>
 
-    <h4>
-      Sus redes sociales oficiales
-    </h4>
-    <a href="https://www.instagram.com/anyataylorjoy/" target="_blank"><img src="assets/img/instagram.png"
-        alt="logo de instagram"></a>
-    <a href="https://www.twitter.com/anyataylorjoy/" target="_blank"><img src="assets/img/twitter.png"
-        alt="logo de twitter"></a>
+      <h4>
+        Sus redes sociales oficiales
+      </h4>
+      <div>
+      <a href="https://www.instagram.com/anyataylorjoy/" target="_blank"><img src="assets/img/instagram.png"
+          alt="logo de instagram"></a>
+      <a href="https://www.twitter.com/anyataylorjoy/" target="_blank"><img src="assets/img/twitter.png"
+          alt="logo de twitter"></a>
+        </div>
+    </div>
   </section>
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
