--- a/sections/fotos.html
+++ b/sections/fotos.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -45,12 +45,51 @@
     </div>
   </nav>
 
-  <section class="fotos">
+  <!-- GALERIA VIEJA
+    
+    <section class="fotos">
     <img src="assets/img/foto1.jpg" alt="wallpapaer de Anya 1">
     <img src="assets/img/foto2.jpg" alt="wallpapaer de Anya 2">
     <img src="assets/img/foto3.jpg" alt="wallpapaer de Anya 3">
     <img src="assets/img/foto4.jpg" alt="wallpapaer de Anya 4">
+  </section> -->
+
+  <section class="fotos">
+
+    <div class="filas">
+
+      <div class="columnas">
+        <img src="../assets/img/img1.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img2.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img3.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img4.jpg" alt="Foto de Anya">
+      </div>
+
+      <div class="columnas">
+        <img src="../assets/img/img5.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img6.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img7.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img8.jpg" alt="Foto de Anya">
+      </div>
+
+      <div class="columnas">
+        <img src="../assets/img/img9.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img10.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img11.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img19.jpg" alt="Foto de Anya">
+      </div>
+      
+      <div class="columnas">
+        <img src="../assets/img/img13.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img14.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img21.jpg" alt="Foto de Anya">
+        <img src="../assets/img/img20.jpg" alt="Foto de Anya">
+      </div>
+  
+    </div>
+
   </section>
+
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
   </footer>
