--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #69b6d4;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">ANYA TAYLOR JOY</a>
+      <a class="navbar-brand">ANYA TAYLOR JOY</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -67,6 +67,35 @@
 
 
   </section> -->
+
+  <section class="contacto">
+    <div class="create">
+           <article class="content">
+        <p>
+          Si quieres estar informado de Anya Taylor-Joy,
+puedes dejarnos tu mail personal,
+de esta manera cada semana estaras recibiendo
+a tu correo las ultimas novedades y noticias
+de nuestra querida Actriz
+        </p>
+
+        <form class="form">
+
+          <label for="username">Ingrese su nombre</label>
+          <input id="username" type="text" placeholder="Ingrese su nombre" />
+
+          <label for="email">Ingrese su mail</label>
+          <input id="email" type="email" placeholder="Ingrese su mail" />
+         
+          <input type="submit" value="Enviar">
+
+        </form>
+      </article>
+
+    </div>
+
+  </section>
+
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
   </footer>
