--- a/sections/fotos.html
+++ b/sections/fotos.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #69b6d4;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">ANYA TAYLOR JOY</a>
+      <a class="navbar-brand">ANYA TAYLOR JOY</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
