--- a/sections/fotos.html
+++ b/sections/fotos.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Anya Taylor Joy</title>
+  <link rel="icon" href="../assets/img/icon.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -45,15 +46,6 @@
     </div>
   </nav>
 
-  <!-- GALERIA VIEJA
-    
-    <section class="fotos">
-    <img src="assets/img/foto1.jpg" alt="wallpapaer de Anya 1">
-    <img src="assets/img/foto2.jpg" alt="wallpapaer de Anya 2">
-    <img src="assets/img/foto3.jpg" alt="wallpapaer de Anya 3">
-    <img src="assets/img/foto4.jpg" alt="wallpapaer de Anya 4">
-  </section> -->
-
   <section class="fotos">
 
     <div class="filas">
@@ -78,14 +70,14 @@
         <img src="../assets/img/img11.jpg" alt="Foto de Anya">
         <img src="../assets/img/img19.jpg" alt="Foto de Anya">
       </div>
-      
+
       <div class="columnas">
         <img src="../assets/img/img13.jpg" alt="Foto de Anya">
         <img src="../assets/img/img14.jpg" alt="Foto de Anya">
         <img src="../assets/img/img21.jpg" alt="Foto de Anya">
         <img src="../assets/img/img20.jpg" alt="Foto de Anya">
       </div>
-  
+
     </div>
 
   </section>
@@ -93,7 +85,7 @@
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
   </footer>
-  </div>
+  
 </body>
 
 </html>
