--- a/sections/historia.html
+++ b/sections/historia.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Anya Taylor Joy</title>
+  <link rel="icon" href="../assets/img/icon.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -68,9 +69,6 @@
       convencida para ser modelo por Sarah Doukas de Storm Model Management, cuando salía de los almacenes Harrods. Fue
       a través de su trabajo como modelo que conoció y firmó un contrato con un agente de actores.<br><br>
 
-
-
-      Taylor-Joy en 2017
       Taylor-Joy saltó a la fama con el papel de Thomasin en la película de terror sobrenatural de Robert Eggers, The
       Witch la cual se estrenó en el Festival de Cine de Sundance en 2015, aunque tuvo su estreno internacional en
       2016.<br>
@@ -114,7 +112,7 @@
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
   </footer>
-  </div>
+  
 </body>
 
 </html>
