--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Anya Taylor Joy</title>
+  <link rel="icon" href="assets/img/icon.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -45,27 +46,27 @@
     </div>
   </nav>
 
-  <div id="principal"></div>
+ 
   <section>
     <div class="presentacion">
-      <p >página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
+      <p>página no oficial <br> dedicada a la actriz internacional Anya Taylor-Joy, <br>espero que
         les guste</p>
 
       <h4>
         Sus redes sociales oficiales
       </h4>
       <div>
-      <a href="https://www.instagram.com/anyataylorjoy/" target="_blank"><img src="assets/img/instagram.png"
-          alt="logo de instagram"></a>
-      <a href="https://www.twitter.com/anyataylorjoy/" target="_blank"><img src="assets/img/twitter.png"
-          alt="logo de twitter"></a>
-        </div>
+        <a href="https://www.instagram.com/anyataylorjoy/" target="_blank"><img src="assets/img/instagram.png"
+            alt="logo de instagram"></a>
+        <a href="https://www.twitter.com/anyataylorjoy/" target="_blank"><img src="assets/img/twitter.png"
+            alt="logo de twitter"></a>
+      </div>
     </div>
   </section>
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
   </footer>
-  </div>
+  
 </body>
 
 </html>
