--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Anya Taylor Joy</title>
+  <link rel="icon" href="../assets/img/icon.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -45,38 +46,16 @@
     </div>
   </nav>
 
-  <!-- FORMULARIO VIEJO <section class="contacto">
-
-    <h2>Suscribete</h2>
-
-    <p>Si quieres estar informado de Anya Taylor-Joy, <br> puedes dejarnos tu mail personal,<br> de esta manera cada
-      semana estaras recibiendo<br> a tu correo las ultimas novedades y noticias <br>de nuestra querida Actriz</p>
-
-    <br>
-    <form>
-      <label for="">Tu Nombre</label>
-      <input type="text" placeholder="Escribe tu nombre">
-      <br>
-      <label for="">Tu Correo</label>
-      <input type="email" placeholder="Ingrese su correo">
-      <br>
-      <textarea placeholder="escribe un mensaje (opcional)"></textarea>
-      <input type="submit" value="ENVIAR">
-
-    </form>
-
-
-  </section> -->
 
   <section class="contacto">
     <div class="create">
-           <article class="content">
+      <article class="content">
         <p>
           Si quieres estar informado de Anya Taylor-Joy,
-puedes dejarnos tu mail personal,
-de esta manera cada semana estaras recibiendo
-a tu correo las ultimas novedades y noticias
-de nuestra querida Actriz
+          puedes dejarnos tu mail personal,
+          de esta manera cada semana estaras recibiendo
+          a tu correo las ultimas novedades y noticias
+          de nuestra querida Actriz
         </p>
 
         <form class="form">
@@ -86,7 +65,7 @@ de nuestra querida Actriz
 
           <label for="email">Ingrese su mail</label>
           <input id="email" type="email" placeholder="Ingrese su mail" />
-         
+
           <input type="submit" value="Enviar">
 
         </form>
@@ -99,7 +78,7 @@ de nuestra querida Actriz
   <footer>
     <p class="piecito">Página creada por Sebastian Leque</p>
   </footer>
-  </div>
+
 </body>
 
 </html>
