--- a/sections/videos.html
+++ b/sections/videos.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Anya Taylor Joy</title>
+  <link rel="icon" href="../assets/img/icon.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -45,19 +46,6 @@
     </div>
   </nav>
 
-  <!-- GALERIA DE VIDEOS VIEJA 
-    
-    <section class="videos">
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/mWG1W_Iqbt4" title="YouTube video player"
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/BjhIPnYJXtY" title="YouTube video player"
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
-
-  </section> -->
 
   <section class="videos">
     <div class="container">
@@ -91,7 +79,6 @@
       </div>
 
     </div>
-
 
   </section>
 
